--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
       - name: cargo build
         uses: actions-rs/cargo@v1
         with:
-          command: build
+          command: build --workspace
 
       - name: cargo test
         uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: test --workspace
 
       - name: cargo fmt check
         uses: actions-rs/cargo@v1
