--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,14 @@ jobs:
       - name: cargo build
         uses: actions-rs/cargo@v1
         with:
-          command: build --workspace
+          command: build
+          args: --workspace
 
       - name: cargo test
         uses: actions-rs/cargo@v1
         with:
-          command: test --workspace
+          command: test
+          args: --workspace
 
       - name: cargo fmt check
         uses: actions-rs/cargo@v1
