.github/workflows/main: Build with nightly
Signed-off-by: Johannes Löthberg <johannes@kyriasis.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          - nightly
 
     steps:
       - name: Cache target
