.github/workflows/main: Don't run rustfmt checks until 2.x is released
Signed-off-by: Johannes Löthberg <johannes@kyriasis.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
-          components: rustfmt, clippy
+          components: clippy
 
       - name: cargo build
         uses: actions-rs/cargo@v1
@@ -43,12 +43,6 @@ jobs:
         with:
           command: test
           args: --workspace
-
-      - name: cargo fmt check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
 
       - name: cargo clippy
         uses: actions-rs/cargo@v1
