--- a/rusty-peanuts-cli/Cargo.toml
+++ b/rusty-peanuts-cli/Cargo.toml
@@ -18,5 +18,6 @@ env_logger = "0.8.1"
 log = "0.4.11"
 dotenv = "0.15.0"
 structopt = "0.3.20"
+serde_json = "1.0.59"
 
 rusty-peanuts-api-structs = { path = "../rusty-peanuts-api-structs" }
