--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 tide = { version = "0.14.0", default-features = false, features = ["h1-server", "logger"] }
 async-std = { version = "1.7.0", features = ["attributes"] }
 serde = { version = "1.0.117", features = ["derive"] }
-sqlx = { version = "0.4.0-beta.1", features = ["postgres", "json", "offline", "time"] }
+sqlx = { version = "0.4.1", features = ["runtime-async-std-rustls", "postgres", "json", "offline", "time"] }
 num_cpus = "1.13.0"
 serde_json = "1.0.59"
 async-trait = "0.1.41"
