--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tide = { version = "0.14.0", default-features = false, features = ["h1-server", "logger"] }
+tide = { version = "0.15.0", default-features = false, features = ["h1-server", "cookies", "logger"] }
 async-std = { version = "1.7.0", features = ["attributes"] }
 serde = { version = "1.0.117", features = ["derive"] }
 sqlx = { version = "0.4.1", features = ["runtime-async-std-rustls", "postgres", "json", "offline", "time"] }
