--- a/rusty-peanuts-cli/Cargo.toml
+++ b/rusty-peanuts-cli/Cargo.toml
@@ -9,7 +9,7 @@ default-run = "rusty-peanuts-cli"
 image = "0.23.12"
 mozjpeg = "0.8.21"
 tiff = "0.6.0"
-rust-s3 = { version = "0.27.0-beta1", default-features = false, features = ["no-verify-ssl", "with-async-std"] }
+rust-s3 = { version = "0.27.0-beta1", default-features = false, features = ["with-async-std"] }
 async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
 surf = "2.1.0"
 serde = "1.0.117"
