Add sitemap listing all tags and photos
Signed-off-by: Johannes Löthberg <johannes@kyriasis.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ percent-encoding = "2.1.0"
 structopt = "0.3.20"
 
 rusty-peanuts-api-structs = { path = "rusty-peanuts-api-structs" }
+sitemap = "0.4.1"
 
 [workspace]
 members = ["rusty-peanuts-api-structs", "rusty-peanuts-cli"]
