--- a/rusty-peanuts-cli/Cargo.toml
+++ b/rusty-peanuts-cli/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "rusty-peanuts-cli"
 [dependencies]
 futures-lite = "1.11.3"
 image = "0.23.14"
+isahc = { version = "1.1.0", features = ["static-ssl"] }
 mozjpeg = "0.8.24"
 tiff = "0.6.1"
 rust-s3 = { version = "0.27.0-beta8", default-features = false, features = ["with-async-std"] }
