--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ num_cpus = "1.13.1"
 opentelemetry = { version = "0.17.0", features = ["rt-async-std", "serialize"] }
 opentelemetry-otlp = { version = "0.10.0", default-features = false, features = ["trace", "grpc-sys", "openssl"] }
 opentelemetry-semantic-conventions = "0.9.0"
-opentelemetry-tide = { git = "https://github.com/asaaki/opentelemetry-tide", rev = "da4988145ca5eb1ddf05fff3e2ebf495da6044ba" }
+opentelemetry-tide = { git = "https://github.com/kyrias/opentelemetry-tide", branch = "fix-high-cardinality-span-names" }
 percent-encoding = "2.1.0"
 rusty-peanuts-api-structs = { path = "rusty-peanuts-api-structs" }
 serde = { version = "1.0.144", features = ["derive"] }
@@ -27,7 +27,7 @@ sqlx = { version = "0.6.1", features = ["runtime-async-std-rustls", "postgres", 
 structopt = "0.3.26"
 tera = { version = "1.17.0", default-features = false, features = ["builtins"] }
 thiserror = "1.0.34"
-tide = { version = "0.16.0", default-features = false, features = ["h1-server", "cookies"] }
+tide = { git = "https://github.com/kyrias/tide", branch = "expose-matched-route-as-ext", default-features = false, features = ["h1-server", "cookies"] }
 time = { version = "0.3.14", default-features = false, features = ["serde"] }
 tracing = { version = "0.1.36", features = ["async-await"] }
 tracing-opentelemetry = { version = "0.17.4", default-features = false }
